<resources>
    <string name="app_name">Ships</string>
    <string name="app_package_name">net.videgro.ships</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=net.videgro.ships</string>
    <string name="app_market_url">market://details?id=net.videgro.ships</string>
    <string name="dot_provider">.provider</string>
    <string name="url_mmsi_info">http://www.marinetraffic.com/en/ais/details/ships/mmsi:PLACEHOLDER_MMSI</string>
    <string name="opendevice_intent_filter_schema">opendevice</string>
    <string name="action_ar">Augmented Reality</string>
	<string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="notification_channel_general_id">net.videgro.ships-notifications</string>
    <string name="notification_channel_general_name">Ships</string>
    <string name="notification_channel_general_description">Ships notifications.</string>
    <string name="notification_channel_services_id">net.videgro.ships-notifications-services</string>
    <string name="notification_channel_services_name">Ships - services</string>
    <string name="notification_channel_services_description">Ships services notifications.</string>
    <string name="notification_channel_repeater_id">net.videgro.ships-notifications-repeater</string>
    <string name="notification_channel_repeater_name">Ships - repeater</string>
    <string name="notification_channel_repeater_description">Ships repeater notifications.</string>
    <string name="notification_service_nmea_title">Running: NMEA service</string>
    <string name="notification_service_nmea_description">Receiving NMEA messages via UDP.</string>
    <string name="notification_service_rtlsdrais_title">Running: RTL-SDR-AIS service</string>
    <string name="notification_service_rtlsdrais_description">RTL-SDR tuned to AIS frequencies.</string>
    <string name="notification_service_tracker_title">Running: Own location service</string>
    <string name="notification_service_tracker_description">Receiving GPS location.</string>
    <string name="notification_repeater_title">Repeater </string>
    <string name="page_show_map">Show map</string>
    <string name="share_subject">I would like to share this ships map with you.</string>
    <string name="share_text">Shared via:</string>
    <string name="share_action_text">Share</string>
	<string name="toggle_turn_on_calibrating_normal">START\n(dense traffic)</string>
	<string name="toggle_turn_off_calibrating_normal">STOP\n(dense traffic)</string>
	<string name="toggle_turn_on_calibrating_thorough">START\n(calm traffic)</string>
	<string name="toggle_turn_off_calibrating_thorough">STOP\n(calm traffic)</string>
	<string name="toggle_turn_on_ais">START</string>
	<string name="toggle_turn_off_ais">STOP</string>
    <string name="sliding_drawer_logging">Show logging</string>
	<string name="sliding_drawer_ships">Show ships</string>
	<string name="popup_found_ppm_title">Found PPM</string>
	<string name="popup_found_ppm_message">The PPM has been stored in the settings. The PPM which was found for your device is:</string>
	<string name="popup_not_found_ppm_title">No valid PPM found</string>
	<string name="popup_not_found_ppm_message">Not possible to automatically determine PPM. Are there ships in your area? Try it again or manually enter the PPM into the Settings.</string>
	<string name="popup_other_rtlsdr_device_title">Other RTL-SDR device</string>
	<string name="popup_other_rtlsdr_device_message">To use another RTL-SDR device, the application will stop now. Insert the RTL-SDR device to start the app automagically. Afterwards make sure to enter the device specific PPM or use the calibrate utility to find it.</string>
	<string name="popup_start_device_failed_title">Failed to start RTL-SDR device</string>
	<string name="popup_start_device_failed_message">Reason:</string>
    <string name="popup_no_ppm_set_title">First time use / External sources</string>
    <string name="popup_no_ppm_set_message"><![CDATA[You have three options:<br><br>- Let this app try to calibrate the RTL-SDR device. For this you need to be in an area with (multiple) ships. (RECOMMENDED)<br><br>- Enter the known PPM value of your RTL-SDR device in the Settings,<br><br>- Don\'t use the RTL-SDR device at all / I don\'t have such a device. Receive from external device and/or fellow users only.]]></string>
    <string name="popup_no_ppm_do_calibrate">Calibrate</string>
    <string name="popup_no_ppm_do_only_external_sources">Only use external sources</string>
    <string name="popup_external_sources_title">External sources</string>
    <string name="popup_external_sources_message">You will only receive Ships data from external sources. To re-enable the Calibrate utility, insert a supported RTL-SDR device.</string>
    <string name="popup_calibration_cancelled_title">Calibration cancelled</string>
	<string name="popup_calibration_cancelled_message">Cancelled calibration of RTL-SDR device. You will only receive Ship data from fellow users.</string>
	<string name="popup_are_you_sure_title">Are you sure?</string>
	<string name="popup_are_you_sure_yes">Yes</string>
	<string name="popup_are_you_sure_no">No</string>
	<string name="popup_receiving_ais_title">Receiving AIS</string>
	<string name="popup_receiving_ais_message">Waiting for AIS data. Please be patient. After receiving data, the ship(s) will be plotted on the map.</string>
    <string name="popup_select_device_title">Select device</string>
	<string name="popup_usb_host_mode_title">USB host mode / OTG</string>
	<string name="popup_usb_host_mode_not_supported_message">USB host mode / OTG not supported at your device. You will only receive Ship data from fellow users.</string>
	<string name="popup_usb_connected_runtime_title">USB device connected</string>
	<string name="popup_usb_connected_runtime_message">You connected a USB device while the application is running. Currently this is not supported. Please restart application to start using the USB device. Application will stop now.</string>
    <string name="popup_ship_info_title">Ship information</string>
    <string name="popup_share_to_cloud_title">Share ships data to cloud</string>
    <string name="popup_share_to_cloud_message">Do you mind to share ships data with fellow users?\n\nYou can change this later in settings.\n\nWARNING: It is not in all regions allowed to repeat received ships data to third parties.</string>
    <string name="popup_share_to_cloud_yes">OK, JUST DO IT !</string>
    <string name="popup_share_to_cloud_no">Don\'t do it</string>
    <string name="popup_share_to_cloud_message_result">Ship data received from dongle, will be repeated to the cloud. You can change this in Settings.</string>
    <string name="popup_ar_error_title">Not possible to start Augmented Reality</string>
    <string name="popup_ar_error_arcore_not_installed">Please install ARCore</string>
    <string name="popup_ar_error_arcore_not_updated">Please update ARCore</string>
    <string name="popup_ar_error_app_not_updated">Please update this app</string>
    <string name="popup_ar_error_arcore_not_supported">This device does not support AR</string>
    <string name="popup_ar_error_arsceneview_not_set">ArSceneView not set.</string>
    <string name="popup_camera_open_error_message">Unable to get camera. Is another app using the camera?</string>
    <string name="popup_camera_and_location_permission_request_title">Permissions</string>
    <string name="popup_camera_and_location_permission_request_message">Location and Camera permissions are needed to use this feature.</string>
    <string name="popup_ar_accuracy_title">Accuracy vessels locations</string>
    <string name="popup_ar_accuracy_message">The locations of moving vessels depicted on the screen are not their exact locations. Vessels are not continuously sending their position, so more accurate data is simply not available.</string>
	<string name="permission_externalstorage_rationale">The app needs storage permission to cache map-tiles and to make sharing available.</string>
    <string name="permission_externalstorage_denied_title">Denied storage permission</string>
	<string name="permission_externalstorage_denied">You denied storage permission. The app won\'t function as expected.</string>
	<string name="permission_externalstorage_neverask">You denied storage permission. The app won\'t function as expected. Please grant permission via Settings-App-Ships-Permissions</string>
	<string name="permission_location_rationale">The app needs location permission to plot your location on the map.</string>
    <string name="permission_location_denied_title">Denied location permission</string>
	<string name="permission_location_denied">You denied location permission. The app won\'t function as expected.</string>
	<string name="permission_location_neverask">You denied location permission. The app won\'t function as expected. Please grant permission via Settings-App-Ships-Permissions</string>
	<string name="button_allow">Allow</string>
	<string name="button_deny">Deny</string>
	<string name="connect_usb_device_status_ok">USB device is open.</string>
    <string name="connect_usb_device_status_error_native_library_not_loaded">This application is not compatible with your device.</string>
    <string name="connect_usb_device_status_error_no_rtlsdr_device_selected">You have not selected an RTL-SDR device.</string>
	<string name="connect_usb_device_status_pending_permission_request">No permission to open device, while requesting permission - Not possible to run this application without the right permissions. Sorry!</string>
	<string name="connect_usb_device_status_error_no_device_found">Not possible to connect to device. Is the device physically connected? Please insert RTL-SDR device before starting. You will only receive Ship data from fellow users.</string>
	<string name="connect_usb_device_status_error_permission_denied">Permission denied to open device - Not possible to run this application without the right permissions. Sorry!</string>
	<string name="connect_usb_device_status_error_security_exception">Security exception occurred while opening USB device.</string>
	<string name="connect_usb_device_status_error_unknown">Unknown error while opening USB device.</string>
    <string name="connect_usb_device_status_exception_unknown_title">Hardware error</string>
    <string name="connect_usb_device_status_exception_unknown_message">Check cable and RTL-SDR.</string>
	<string name="connect_usb_device_status_error_stop">Error occurred while stopping RTL-SDR device. Stopped already?"</string>
	<string name="connect_usb_device_status_error_running_already">RTL-SDR is running already. Must stop before started again.</string>
	<string name="connect_usb_device_status_change_ppm_ok">Changed PPM.</string>
	<string name="connect_usb_device_status_change_ppm_failed">Failed to change PPM.</string>
	<string name="connect_usb_device_status_started">RTL-SDR device started.</string>
	<string name="connect_usb_device_status_stopped">RTL-SDR device stopped.</string>
    <string name="indicator_ship_received_internal">Ship data received from dongle</string>
    <string name="indicator_ship_received_external">Ship data received from peer</string>
    <string name="ships_table_col_country">Country</string>
    <string name="ships_table_col_type">Type</string>
    <string name="ships_table_col_mmsi">MMSI</string>
    <string name="ships_table_col_name_callsign">Name/Callsign</string>
    <string name="title_calibrate">Calibrate RTL-SDR device</string>
    <string name="description_calibrate">Each RTL-SDR has it\'s unique parts per million offset (PPM). Use this utility to find the PPM for your device or set it directly using the settings of this application. Typical values PPM are between -100 and +100. Average calibration time is between 5 and 10 minutes. Please be patient.</string>
    <string name="alt_rtlsdrStick">RTL-SDR device</string>
</resources>