<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.videgro.ships.MainActivity" >

    <group android:id="@+id/main_menu_group_show_map">
       <item
            android:id="@+id/menu_share"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:showAsAction="ifRoom"
            android:title="@string/share_action_text"/>

        <item
            android:id="@+id/action_ar"
            android:icon="@drawable/ic_menu_ar"
            android:orderInCategory="60"
            android:showAsAction="ifRoom"
            android:enabled="false"
            android:visible="false"
            android:title="@string/action_ar"/>
    </group>

    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="80"
        android:showAsAction="ifRoom"
        android:title="@string/action_help"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
