<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<WebView
	    android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/promo" />

	<ToggleButton
	        android:id="@+id/startStopAisButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"        
	        android:textOff="@string/toggle_turn_on_ais"
	        android:textOn="@string/toggle_turn_off_ais" />

	<SlidingDrawer
		android:id="@+id/slidingDrawer1"
        android:layout_above="@id/promo"
		android:layout_width="match_parent"
		android:layout_height="150dp"
		android:content="@+id/loggingScrollView"
		android:handle="@+id/handle"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/handle"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:contentDescription="@string/sliding_drawer_logging"
            android:src="@drawable/ic_information" />

		<ScrollView android:id="@+id/loggingScrollView"
            android:background="#77000000"
			android:layout_height="fill_parent"
            android:layout_width="fill_parent">
			<TextView
				android:id="@+id/textView1"
				android:maxLines="100"
                android:textColor="#FFFFFF"
				android:singleLine="false"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
		</ScrollView>

	</SlidingDrawer>
	
    <include android:id="@+id/promo" android:layout_alignParentBottom="true" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/promo" />

</RelativeLayout>
